# jhPrimeminer

./: .gitignore  CMakeLists.txt  Makefile
src/primecoinMiner/: bignum2.h  bn2.cpp  global.h  jsonrpc.cpp  main.cpp  miner.cpp  prime.cpp  prime.h  uint256.h  xptServer.cpp
src/primecoinMiner/jhlib/: JHLib.h  hashTable_uint32.cpp  streamWrapper.cpp
